# Simulacion-de-neurona

./: README.md  neuro_engine.py  sim_synapse.py
C++/: CMakeLists.txt  main.cpp
python/: neuro_3d.py  neuro_sim_3d.py  neuro_sim_v2.py  neuro_sim_v3.py
